[FIX] web: grouped kanban card doesn't have right size on mobile
Before this commit the grouped kanban card with a search panel didn't
have the right width because they used the size of the kanban tabs.

After this commit, on mobile, the size used is the full width of
the screen like the ungrouped kanban.

Steps to reproduce:
* Go in an app with a search panel (e.g. employees hr)
* Use the filter to group the kanban view (e.g. Department) => BUG

Task ID : 2200099

--- a/addons/web/static/src/scss/kanban_view_mobile.scss
+++ b/addons/web/static/src/scss/kanban_view_mobile.scss
@@ -3,6 +3,9 @@
         display: block;
         position: relative;
         overflow-x: hidden;
+        &.o_renderer_with_searchpanel {
+            width: 100%;
+        }
 
         .o_kanban_mobile_tabs {
             display:flex;
